--- a/_posts/2022-04-07-practice-2.md
+++ b/_posts/2022-04-07-practice-2.md
@@ -26,7 +26,7 @@ LIMIT = 50
 
 URL = f"https://kr.indeed.com/%EC%B7%A8%EC%97%85?q=python&limit={LIMIT}&radius=25&start=0&vjk=0699e6dbb5a0ec38"
 
-def extract_indeed_pages():
+def get_last_page():
   result = requests.get(URL)
   soup = BeautifulSoup(result.text,"html.parser")
   # html의 내용을 가져온다.
@@ -43,17 +43,26 @@ def extract_indeed_pages():
 def extract_job(html):
     title = html.find("span",title=True).text
     company = html.find("span", {"class" : "companyName"}).string
-    return{'title': title, 'company': company}
+    location = html.find("div",{"class" : "companyLocation"}).string
+    job_id = html["data-jk"]
+    return{'title': title, 'company': company, 'location': location,'link' : f"https://kr.indeed.com/%EC%B7%A8%EC%97%85?q=python&radius=25&start=50&vjk={job_id} "}
 
-def extract_indeed_jobs(last_pages):
+def extract_jobs(last_pages):
   jobs = []
-  #for page in range(last_pages):
-  result = requests.get(f"{URL}&start={0*LIMIT}")
-  soup = BeautifulSoup(result.text,"html.parser")
-  results = soup.find_all('a',{"class" : "fs-unmask"} )
-  for result in results:
-    job = extract_job(result)
-    jobs.append(job)
+  for page in range(last_pages):
+    print(f"Scrapping page {page}")
+    result = requests.get(f"{URL}&start={page*LIMIT}")
+    soup = BeautifulSoup(result.text,"html.parser")
+    results = soup.find_all('a',{"class" : "fs-unmask"} )
+    for result in results:
+      job = extract_job(result)
+      jobs.append(job)
+  return(jobs)
+
+
+def get_jobs():
+  last_page = get_last_page()
+  jobs = extract_jobs(last_page)
   return jobs
 
 
@@ -63,13 +72,49 @@ main.py
 
 ~~~python
 
-from indeed import extract_indeed_pages, extract_indeed_jobs
-# 
+from indeed import get_jobs as get_indeed_jobs
+from so import get_jobs as get_so_jobs
 
-last_indeed_page = extract_indeed_pages()
 
-extract_indeed_jobs(last_indeed_page)
+#indeed_jobs = get_indeed_jobs()
+so_jobs = get_so_jobs()
+#print(indeed_jobs)
 
-print(indeed_jobs)
+~~~
+
+so.py
+
+~~~python
+
+import requests
+from bs4 import BeautifulSoup
+# s-pagination
+URL = f"https://stackoverflow.com/jobs/companies?q=python"
+
+
+def get_last_page():
+  result = requests.get(URL)
+  soup = BeautifulSoup(result.text, "html.parser")  
+  pages = soup.find("div", {"class":"s-pagination"}).find_all("a")
+  last_page = pages[-2].get_text(strip=True)
+  return int(last_page)
+
+
+def extract_jobs(last_page):
+  jobs = []
+  for page in range(last_page):
+    result = requests.get(f"{URL}&pg={page+1}")
+    soup = BeautifulSoup(result.text, "html.parser")
+    results = soup.find_all("div", {"class":"d-flex"})
+    for result in results:
+      print(results)
+      
+    
+
+
+def get_jobs():
+  last_page = get_last_page()
+  jobs = extract_jobs(last_page)
+  return jobs
 
 ~~~
